app/webroot/css/style.css
/* ... */
ul.actionDropdown a.participants{
	background-image: url(../img/icons/Contact_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.storages{
	background-image: url(../img/icons/storage_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.identification{
	background-image: url(../img/icons/identifiers_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.aliquot.uses{
	background-image: url(../img/icons/aliquotUse_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.consents{
	background-image: url(../img/icons/consent_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.diagnosis{
	background-image: url(../img/icons/dx_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.treatments{
	background-image: url(../img/icons/seringue_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.family.histories{
	background-image: url(../img/icons/family_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.quality.controls{
	background-image: url(../img/icons/qualityControl_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.participant.messages{
	background-image: url(../img/icons/post_it_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.annotation{
	background-image: url(../img/icons/annotation_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}
ul.actionDropdown a.specimen.review{
	background-image: url(../img/icons/path_review_16x16.png);
	background-position: left center;
	background-repeat: no-repeat;
}


ul.actionDropdown a, ul.actionDropdown li:hover a{
	text-indent: 14px;
}
ul.actionDropdown li a{
	padding-left: 20px;
}

.databrowser div.info{
	position: absolute;
	background-color: #374D61;
	color: #CCCCDD;
	width: 300px;
	height: auto;
	top: 15px;
	display: none;
	padding: 5px;
	z-index: 1;
	text-align: center;
}

.databrowser div.info.left{
	right: 15px;
	-moz-border-radius: 10px 0px 10px 10px;
	-webkit-border-radius: 10px 0px 10px 10px;
}
	
.databrowser div.info.right{
	left: 15px;
	-moz-border-radius: 0px 10px 10px 10px;
	-webkit-border-radius: 0px 10px 10px 10px;
}

.databrowser td:hover div.info{
	display: block;
}

.databrowser span.title{
	font-size: 130%;
}

.popup_container .wrapper, div.popup_container div.wrapper div.actions{
	margin: 0px;
	min-height: 0px;	
}

.std_popup{
	background : transparent url(jQuery/popup/img/dark.png);
	-moz-border-radius : 0 0 5px 5px;
	-webkit-border-radius : 0 0 5px 5px;
	padding : 5px;
	display: none;
}

table.index tr td:first-child{
	/* gives minimal width to rows first cell in index tables */
	width: 1px;
}

input.datepicker[type=button]{
	width: 1px;
	height: 1px;
}

fieldset.submit{
	background-color: #f2f2ff;
	text-align: left;	
}

ul.error{
	border: solid black;
	border-width: 0 1px 0 1px;
}

.popup_container div.frame{
	max-height: 500px;
	overflow: auto;
}
.popup_container{
	text-align: center;
}

.tool_popup{
	background-image: url(../img/icons/Preview_16x16.png);
	padding-left: 14px;
}

table.browserBubble th{
	white-space: nowrap;
	vertical-align: middle;	
}

span.button a{
	text-decoration: none;
	color: #000;
}

.content.empty div{
	margin: 2px 0;
}

.nowrap{
	white-space: nowrap;	
}

